[gd_scene load_steps=2 format=3 uid="uid://cy0th2qvkmn8y"]

[ext_resource type="Script" uid="uid://bor55gok1t81k" path="res://scripts/option_ui.gd" id="1_option"]

[node name="OptionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_option")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
text = "Cài đặt"
horizontal_alignment = 1

[node name="AudioSection" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="AudioLabel" type="Label" parent="Panel/VBoxContainer/AudioSection"]
layout_mode = 2
text = "Âm nhạc"

[node name="MusicToggle" type="CheckButton" parent="Panel/VBoxContainer/AudioSection"]
layout_mode = 2
size_flags_horizontal = 0
text = "Bật âm nhạc"

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Đóng"

[connection signal="pressed" from="Panel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
